--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">amazing-android-weather</string>
+    <string name="app_name">KolleK</string>
 
     <!-- recherche -->
     <string name="icn_go_to_details">Détails</string>
