add Items for multiple column

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="icn_search_clear_content_description">Annuler</string>
 
     <!-- home -->
-    <string name="entry_label">Tu hésites à aller à la plage ? \n Go regarder la météo !</string>
+    <string name="entry_label">KolleK</string>
 
     <!-- Details -->
     <string name="details_city_label">Résultats pour la ville de %s</string>
