SOAIG - add Kollek home screen

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -7,6 +7,25 @@
     <string name="password">password</string>
     <string name="error_login">Error username / password</string>
 
+    <!-- Home -->
+    <string name="nb_mineral">"Total number of minerals "</string>
+    <string name="value_mineral">"Value of the collection "</string>
+    <string name="button_collection">Collection</string>
+    <string name="button_map">Map</string>
+
+
+
+
+
+
+
+
+
+
+    <!-- OLD -->
+
+
+
 
 
 
